[package]
name = "fuzzy-message-detection"
version = "0.1.0"
edition = "2021"
authors = ["Janmajaya Mall <janmajayamall@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.2"
rand_core = "0.5.0"
sha3 = "0.9.1"
ark-ff = "0.3.0"
ark-ec = "0.3.0"